@@ -1,3 +1,7 @@
+2008-05-11  Mike Kestner <mkestner@novell.com> 
+
+	* libsteticui/SignalsEditor.cs: some Disposal bulletproofing.
+
 2008-04-30  Mike Kestner <mkestner@novell.com> 
 
 	* libstetic/wrapper/objects.xml: clamp Gtk.Misc.(X|Y)align to values
